--- a/Ex_2/index.html
+++ b/Ex_2/index.html
@@ -22,7 +22,8 @@
                 <a href="#" class="nav-link">Staff</a>
             </li> 
             <li class="nav-item">
-                <a href="#" class="nav-link">Pricing</a>
+                <a href="./pages/podcast.html" class="nav-link">Podcast
+                </a>
             </li> 
         </ul> 
     </header>
